# agent-hybrid

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
agent/: main.py
agent/api/: infer.py
agent/core/: config.py  prompt.py
agent/models/: schema.py
agent/registry/: tool_registry.py  tool_spec_loader.py
agent/services/: reasoner.py  tool_executor.py
agent/tools/: extract_text_from_url.py  search_articles.py  summarize_text.py  translate_text.py
